--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "date-fns": "^2.29.3",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
     "moment": "^2.29.4",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
