--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-icons": "^4.9.0",
     "react-resize-observer": "^1.1.1",
     "sass": "^1.63.1",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
