--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^4.9.0",
     "react-resize-observer": "^1.1.1",
     "sass": "^1.63.1",
+    "simplebar-react": "^3.2.4",
     "typescript": "5.1.3",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
