--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-mentions": "^4.4.9",
     "react-resize-observer": "^1.1.1",
     "react-spinners": "^0.13.8",
+    "react-toggle": "^4.1.3",
     "sass": "^1.63.1",
     "simplebar-react": "^3.2.4",
     "typescript": "5.1.3",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/react-mentions": "^4.1.8",
+    "@types/react-toggle": "^4.0.3",
     "import-sort": "^6.0.0",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
